form alignment fixed

--- a/client/src/components/Calendar/Calendar.css
+++ b/client/src/components/Calendar/Calendar.css
@@ -8,7 +8,7 @@
     align-items: center;
     border-radius: 8px;
     background: white;
-    opacity: 0.9;
+    /* opacity: 0.9; */
     margin-top: 10px;
     -moz-box-shadow: 0 0 5px #ccc;
     -webkit-box-shadow: 0 0 5px #ccc;
@@ -17,10 +17,12 @@
 
 .react-calendar__navigation__arrow {
     font-size: 25px;
+    border-radius: 3px;
 }
 
 .react-calendar__tile {
     font-size: large;
+    border-radius: 3px;
 }
 
 .react-calendar__tile--active {
