--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -1,14 +1,33 @@
-
-
 #dataForm {
     margin-bottom: 5em;
     border-radius: 8px;
     background: white;
-    opacity: 0.9;
+    /* opacity: 0.9; */
     margin-top: 10px;
     -moz-box-shadow: 0 0 5px #ccc;
     -webkit-box-shadow: 0 0 5px #ccc;
     box-shadow: 0 0 5px #ccc;
+    padding: 10px;
+}
+
+.formItems {
+    display: flex;
+    text-align: left;
+    /* margin-left: 15%; */
+    width: 85%;
+    margin: auto;
+}
+
+.submitBTN {
+    display: flex;
+    text-align: center;
+    /* margin: auto; */
+    /* margin-left: 2% !important; */
+}
+
+.submitBtn {
+    margin: auto;
+    background: black;
 }
 
 span::before {
